syntax="proto3";
package pb;
option go_package="/pb_folder";

import "processer_message.proto";
import "memory_message.proto";
import "storage_message.proto";
import "screen_message.proto";
import "keyboard_message.proto";
import "google/protobuf/timestamp.proto";

message Laptop{
  string id=1;
  string brand=2;
  string name=3;
  CPU cpu=4;
  Memory ram=5;
  repeated GPU gpu=6;
  repeated Storage storage=7;
  Screen screen=8;
  Keyboard keyboard=9;
  oneof weight{
    double weight_kg=10;
    double weight_lb=11;
  }
  double price_usd=12;
  uint32 release_year=13;
google.protobuf.Timestamp update_at=14;
}